--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,7 +6,7 @@
     min-height: 600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url("../images/hero-image.jpg");
+        url("/images/bg-hero-image.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
