--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -31,6 +31,7 @@
     --work-overlay-color: rgba(47, 48, 58, 0.8);
     --backdrop-color: rgba(0, 0, 0, 0.2);
     --modal-btn-hover: #188ce8;
+    --primary-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     --main-margin: 30px;
     --secondary-margin: 50px;
@@ -39,6 +40,5 @@
     --main-title-size: 16px;
     --main-text-size: 14px;
     --main-border-radius: 4px;
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
