--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,7 +5,7 @@
     color: var(--accent-color);
 }
 
-.logo__studio_header {
+.logo__studio-header {
     color: var(--logo-studio-header-color);
 }
 
