fixed logo studio footer

--- a/css/main.css
+++ b/css/main.css
@@ -439,7 +439,7 @@ header {
   color: var(--logo-studio-header-color);
 }
 
-.logo__studio_footer {
+.logo__studio-footer {
   color: var(--primary-bg-color);
 }
 
