--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -9,6 +9,6 @@
     color: var(--logo-studio-header-color);
 }
 
-.logo__studio_footer {
+.logo__studio-footer {
     color: var(--primary-bg-color);
 }
