--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,7 @@ footer .socials__icon {
   opacity: 0;
 }
 
-.close__button {
+.close-button {
   position: absolute;
   display: flex;
   align-items: center;
@@ -231,7 +231,7 @@ footer .socials__icon {
   cursor: pointer;
   transition: fill var(--primary-animation);
 }
-.close__button:hover, .close__button:focus {
+.close-button:hover, .close-button:focus {
   fill: var(--accent-color);
 }
 
@@ -330,8 +330,10 @@ footer .socials__icon {
   border-color: var(--accent-color);
 }
 
-.agreement__link {
+.agreement-link {
   color: var(--accent-color);
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .modal__button {
